# cddd-onnx

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
cddd_onnx/: __init__.py  __main__.py  main.py  model_downloader.py  preprocessing.py  tokenizer.py
tests/: 200_results.csv  conftest.py  molecules.csv  test_main.py
